# API-de-Productos

./: README.md  pyproject.toml
apiproducts/: main.py
apiproducts/Model/: schemas.py
tests/: test_apiproducts.py
